# NPS_PyQt

./: .gitignore  Browser_NPS.py  Compulsory_booklet_PyQt_NPS.xlsx  CreateForm.py  CreateMetaData.py  Draw_on_QLabel.py  GUI.py  ImageGeneration.py  MainWindow_NPS.py  MainWindow_NPS.ui  NPS_processing_description.txt  ProcessROI.py  README.md  ROI_selection_widget.py  StartClass.py  config_nps_qt6.py  custom_rectangle_selector.py  dialogArrayROIs.ui  imports_nps.py  requirements.txt
MainWindow_NPS/: CMakeLists.txt  MainWindow_NPS.qmlproject  MainWindow_NPS.qmlproject.qtds  qmlmodules
MainWindow_NPS/content/: App.qml  Screen01.ui.qml
MainWindow_NPS/imports/: CMakeLists.txt
MainWindow_NPS/imports/MainWindow_NPS/: CMakeLists.txt  qmldir
MainWindow_NPS/imports/MainWindow_NPS/designer/: plugin.metainfo
MainWindow_NPS/src/: import_qml_plugins.h
